[package]
name = "Kobold_Background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.115"
time = "0.3.36"
wallpaper-windows-user32 = "0.4.0"
anyhow = "1.0.82"
async-std = "1.12.0"
rand = "0.9.0-alpha.1"
